@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,7 +24,7 @@
 package org.openjdk.foreigntest;
 
 import java.lang.foreign.*;
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.Arena;
 import java.lang.invoke.*;
 
 public class PanamaMainInvoke {
@@ -43,9 +43,9 @@ public class PanamaMainInvoke {
 
     public static void testInvokeMemorySegment() throws Throwable {
         System.out.println("Trying to get MemorySegment");
-        var mh = MethodHandles.lookup().findStatic(MemorySegment.class, "ofAddress",
-                MethodType.methodType(MemorySegment.class, long.class, long.class, SegmentScope.class));
-        var seg = (MemorySegment)mh.invokeExact(0L, 4000L, SegmentScope.global());
+        var mh = MethodHandles.lookup().findVirtual(MemorySegment.class, "reinterpret",
+                MethodType.methodType(MemorySegment.class, long.class));
+        var seg = (MemorySegment)mh.invokeExact(MemorySegment.NULL, 10L);
         System.out.println("Got MemorySegment");
     }
 }
